syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "zetachain/zetacore/observer/observer.proto";
import "zetachain/zetacore/pkg/chains/chains.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

message ChainParamsList { repeated ChainParams chain_params = 1; }

message ChainParams {
  int64 chain_id = 11;
  uint64 confirmation_count = 1;
  uint64 gas_price_ticker = 2;
  uint64 in_tx_ticker = 3;
  uint64 out_tx_ticker = 4;
  uint64 watch_utxo_ticker = 5;
  string zeta_token_contract_address = 8;
  string connector_contract_address = 9;
  string erc20_custody_contract_address = 10;
  int64 outbound_tx_schedule_interval = 12;
  int64 outbound_tx_schedule_lookahead = 13;
  string ballot_threshold = 14 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string min_observer_delegation = 15 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool is_supported = 16;
}